test/flowanalysis/recursion/rec_fun-1.good
Error: Unable to resolve return type of function 'f' (rec_fun-1.chpl:2)
Error: Called recursively at this point (rec_fun-1.chpl:5)
